# azure-architecture-diagram-builder

./: .dockerignore  .env.example  .gitignore  AI_SERVICE_REFERENCE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SUPPORT.md  TEST_AI_SERVICES.md  azure.yaml  deploy.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pyproject.toml  sample-arm-template.json  sample-bicep-template.bicep  sample-terraform-template.tf  start.sh  vite.config.ts
.azure/: .gitignore  deployment-plan.md
.github/: copilot-instructions.md
Architect_Agent_AIDC_collaboration/: 01-starter-prompts.md  02-architect-agent-snippet.md  03-aidc-facilitator-guide.md  README.md
Architecture_validations/: architecture-validation-1768096256599.md  architecture-validation-1768098954705.md  architecture-validation-1768143224628.md  architecture-validation-1768167712870.md  architecture-validation-1768168993790.md  architecture-validation-1768172377735.md  architecture-validation-1768175629961.md  architecture-validation-1768321891701.md  architecture-validation-1768341058854.md  architecture-validation-1768349497333.md  architecture-validation-1768350600181.md  architecture-validation-1768351035458.md  architecture-validation-1768404182370.md  architecture-validation-1770052087092-gpt52-medium.md  architecture-validation-1770932531248-gpt41.md  architecture-validation-1770932658803-gpt41.md  architecture-validation-1770932855483-gpt52-low.md  architecture-validation-1770933137611-gpt52-low.md  architecture-validation-1770933301541-gpt52-medium.md  one.md  (+2 more)
SCOUT/: README.md  (+1 more)
(+996 files in other folders)
